# jiraiq-mcp

./: .gitignore  GITHUB_UPLOAD_GUIDE.md  LICENSE  README.md  README_OLD.md  jiraiq_server.py  pyproject.toml  test_claude.py  test_connection.py  test_jira.py  test_mcp.py
